<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtv_adddia"
        android:id="@+id/txtv_adddia"
        android:textColor="@color/abc_search_url_text_selected"
        android:textSize="20dp"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtv_addReg"
            android:id="@+id/txtv_addReg"
            android:textColor="@color/abc_input_method_navigation_guard" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxtv_addregie" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtv_addtitle"
            android:id="@+id/txtv_addtitle"
            android:textColor="@color/abc_input_method_navigation_guard" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxtv_addtitle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtv_addRelease"
            android:id="@+id/txtv_addRelease"
            android:textColor="@color/abc_input_method_navigation_guard" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxtv_addrelease" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtv_addSynopsis"
            android:id="@+id/txtv_addSynopsis"
            android:textColor="@color/abc_input_method_navigation_guard" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etxtv_addsynops" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/txtv_addAfbeelding"-->
            <!--android:id="@+id/txtv_addAfbeelding"-->
            <!--android:textColor="@color/abc_input_method_navigation_guard" />-->

        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/etxtv_addAfbeelding" />-->
    <!--</LinearLayout>-->
</LinearLayout>